# PyRFDT

./: __init__.py  pyproject.toml  requirements.txt
pyrfdt/: editor.py  factory.py  scene.py
pyrfdt/components/: camera.py  radar.py  transform.py  transmitter.py
rfdt/: editor.py  messages.py  parameters.py  scene_object.py  server.py
rfdt/components/: __init__.py  base.py  light.py  material.py  mesh.py  radar.py  receiver.py
rfdt/ui/: __init__.py  console.py  node_compiler.py  node_editor_manager.py  nodes.py  result_visualizer.py  system_nodes_class.py
