[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrfdt"
version = "0.0.1"
description = "RF Digital Twin"
authors = [{ name = "Anonymous", email = "anon@example.com" }]
dependencies = [
    "numpy",
    "torch"
]

[tool.setuptools.packages.find]
where = ["pyrfdt*"]
